--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
             rel="stylesheet"
         />
         <link
-            href="glint://homeTab/post/${userId}/${postId}"
+            href="glint://homeTab/post/24/34"
         />
+        <script>
+          function showAlert() {
+            var myText = "This can be whatever text you like!";
+            alert (myText);
+          }
+          </script>
     </head>
-    <body>
+    <body onload="showAlert()" link="glint://homeTab/post/24/34">
     </body>
 </html>
